--- a/src/index.css
+++ b/src/index.css
@@ -1,11 +1,11 @@
-:root {
-  line-height: 1.5;
+html, body, #root {
+  font-size: 16px;
   font-weight: 400;
-  background-color: #335555;
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  font-style: normal;
+}
+
+html, body, button, input #root {
+  font-family: "Space Mono", monospace;
 }
 
 html {
@@ -16,7 +16,6 @@ html {
 body {
   margin: 0;
   display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
+  width: 100%;
+  height: 100vh;
 }
