--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,5 @@
 html, body, #root {
-  font-size: 16px;
+  font-size: 10px;
   font-weight: 400;
   font-style: normal;
 }
@@ -18,4 +18,10 @@ body {
   display: flex;
   width: 100%;
   height: 100vh;
+}
+
+@media screen and (min-width: 600px) {
+  html, body, #root {
+    font-size: 16px;
+  }
 }
