--- a/src/screens/CreateBudget/CreateBudget.css
+++ b/src/screens/CreateBudget/CreateBudget.css
@@ -28,6 +28,7 @@
   justify-content: space-between;
   gap: 1rem;
   font-size: 1.5rem;
+  margin-bottom: .5rem;
 }
 
 .create-budget__input-group input {
@@ -37,10 +38,14 @@
   border-color: inherit;
   background-color: inherit;
   color: inherit;
+  border-radius: 0;
 }
 
 .create-budget__input-group input:focus {
+  border: 0;
   outline: 0;
+  border-bottom: 1px solid #000;
+  border-color: inherit;
 }
 
 .create-budget__input-options {
@@ -56,6 +61,15 @@
   border: 0;
   border-radius: 5px;
   cursor: pointer;
+}
+
+.create-budget__input-group--decimal {
+  flex-wrap: wrap;
+}
+
+.create-budget__input-group--decimal .create-budget__input-options {
+  width: 100%;
+  justify-content: flex-end;
 }
 
 .create-budget--light
