Update date line logic

--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,9 @@
-html, body, #root {
+html, body, main,#root {
   font-size: 10px;
   font-weight: 400;
   font-style: normal;
   overflow-x: hidden;
+  box-sizing: border-box;
 }
 
 html, body, button, input, #root {
