--- a/src/screens/CurrentBudget/BudgetLines.css
+++ b/src/screens/CurrentBudget/BudgetLines.css
@@ -14,7 +14,7 @@
 
 .current-budget__budget-lines .curent-budget__date {
   font-size: 1rem;
-  margin-bottom: 20px;
+  margin: 3rem 0;
 }
 
 .current-budget__budget-lines .current-budget__date__line {
