--- a/src/screens/CurrentBudget/InputModal.css
+++ b/src/screens/CurrentBudget/InputModal.css
@@ -14,6 +14,11 @@
   color: #333333
 }
 
+.budget-input-modal--dark {
+  background-color: #333333;
+  color: #fff;
+}
+
 .budget-input-modal__display {
   display: flex;
   flex-direction: row;
@@ -82,11 +87,11 @@
   width: 30%;
   text-transform: uppercase;
   background: lightgreen;
+  color: inherit;
 }
 
 .budget-input-modal__submit
 button:last-of-type {
   background: red;
-  color: #333333;
   width: 65%;
 }
