--- a/src/screens/CurrentBudget/InputModal.css
+++ b/src/screens/CurrentBudget/InputModal.css
@@ -30,6 +30,34 @@
   margin-bottom: 2rem;
 }
 
+.budget-input-modal__note {
+  position: absolute;
+  display: flex;
+  width: 30rem;
+  justify-content: flex-end;
+  align-items: center;
+  top: 2rem;
+  button {
+    background: transparent;
+    color: inherit;
+    border-color: inherit;
+    border: 1px solid;
+    border-radius: .5rem;
+    padding: .5rem 1rem;
+  }
+}
+
+.budget-input-modal__note__input,
+.budget-input-modal__note__input:focus {
+  width: 10rem;
+  border: 0;
+  color: inherit;
+  background: transparent;
+  outline: none;
+  font-size: 1.5rem;
+  text-align: right;
+}
+
 @keyframes slide {
   0% { margin-top: 100%; }
   100% { margin-top: 0%; }
